<resources>
    <string name="app_name">Learning App</string>
    <string name="recycle_view_with_differ">Recycle View With Differ</string>
    <string name="room_database">Room DataBase</string>
    <string name="empty_list">Empty List</string>
    <string name="add_user_button">addUserButton</string>
    <string name="name">Name</string>
    <string name="age">Age</string>
    <string name="save_button">SaveButton</string>
    <string name="imagemovie">ImageMovie</string>
    <string name="retrofit">Retrofit</string>
    <string name="navigation_components">NavigationComponents</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="go_to_home_fragment">Go to Home Fragment</string>
    <string name="write_text_here">Write to send as args to next fragment </string>
    <string name="send">Send</string>
    <string name="navigation_components2">NavigationComponents 2</string>
    <string name="search">Search</string>
    <string name="profile">Profile</string>
    <string name="home">Home</string>
    <string name="favorite">Favorite</string>
    <string name="detail">Detail</string>
    <string name="add">Add</string>
    <string name="main">Main</string>
    <string name="coroutines">Coroutines</string>
    <string name="start_tasks">Start Tasks</string>
    <string name="hint_text1">Two coroutines will be started in IO by button click \n with the first task completing after a 2-second delay and the second task finishing after a 4-second delay.</string>
    <string name="start_suspend">Start Suspend Function</string>
    <string name="start_runBlocking">Block Main(ui) Thread</string>
    <string name="hint_text2">if you click on this button it running a suspend func for 4 sec.\nyou can not use ui when function is running!</string>
    <string name="start_job">Start Job</string>
    <string name="start_job2">Start job but wait for result</string>
    <string name="hintText3">If you click on the \"First\" button, this loop will run continuously without stopping, even if you exit this activity. \n But if you click on the \"Second\" button, this loop will run within the scope of this activity\'s lifecycle, meaning it will stop when you leave this activity.</string>
    <string name="hilt">Hilt + RoomDB</string>
    <string name="hilt2">Hilt + Retrofit</string>
    <string name="enter_text">Enter You Note</string>
    <string name="viewmodel">ViewModel</string>
    <string name="vmtxt1">0</string>
    <string name="livedata">LiveData</string>
    <string name="set_value">Set Value</string>
    <string name="image">Image</string>
    <string name="add_button">Add Button\n</string>
    <string name="title">Title\n</string>
    <string name="description">Description</string>
    <string name="datastore">DataStore</string>

</resources>